479: Multiple account exception. (#249)
479: Multiple account exception. (#249)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -115,3 +115,12 @@ databaseChangeLog:
         - dropColumn:
            columnName: subdomain_name
            tableName: companies
+
+  - changeSet:
+        id: 1565786558054-4
+        author: max-eb
+        changes:
+        - addUniqueConstraint:
+            columnNames: user_id
+            constraintName: uq_ensure_unique_user_id
+            tableName: users
