495: Use Auth0 custom domain. (#253)
495: Use Auth0 custom domain. (#253)

--- a/config/application.yml
+++ b/config/application.yml
@@ -37,3 +37,9 @@ aws:
 
 email:
   retryLimit: 5
+
+auth0:
+  algorithm: RS256
+  issuer: https://${auth0.domain}/
+  jwks: https://${auth0.domain}/.well-known/jwks.json
+  customNamespace: https://interviewed.com/
