Jira/sh 447 sec arbitrary files can be uploaded as the ser avatar image (#254)
* code format

* review

* code format

* Add a new exception object

* add some tests

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -22,6 +22,11 @@ spring:
     cache: false
   profiles:
     include: database
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 30MB
+      max-request-size: 30MB
 
 application:
   systemEmailAddress: noreply@interviewed.com
