461: Restrict registration pending banner (#271)
* 461: Restrict registration pending banner.

* 461: Update liquibase changes.

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -335,3 +335,11 @@ databaseChangeLog:
             file: db/changelog/data/paid-holidays.csv
             primaryKey: id
             tableName: paid_holidays
+
+  - changeSet:
+      id: 1568257721736-1
+      author: max-eb
+      runOnchange: true
+      changes:
+        - dropTable:
+            tableName: permissions
