530 Remove employee number (#279)
* delete notion of employee number

* delete notion of employee number

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -343,3 +343,11 @@ databaseChangeLog:
       changes:
         - dropTable:
             tableName: permissions
+
+  - changeSet:
+      id: 1568623658913-1
+      author: haibo-eb
+      changes:
+        - dropColumn:
+            columnName: employee_number
+            tableName: users
