--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -27,6 +27,10 @@ spring:
       enabled: true
       max-file-size: 30MB
       max-request-size: 30MB
+  redis:
+    host: localhost
+    port: 6379
+    expiration: 36000
 
 application:
   systemEmailAddress: noreply@interviewed.com
