584 Time off bug paid holidays calculate time is time of chrome (#310)
* add permission

* Determine if the date is a past date based on server time

* add validation

* add a custom constraint and validator

* code format

* commit

* commit

* add limit, paid holiday can't be edited by the current admin if the paid holiday does not created by the admin

* commit

* commit

* rename the validator

* refactor the validator

* delete a unused annotation

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -421,3 +421,25 @@ databaseChangeLog:
                   name: verify_change_work_email_at
                   type: datetime
             tableName: users
+
+  - changeSet:
+      id: 1569287995020-1
+      author: haibo-eb
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: creator_id
+                  type: bigint
+            tableName: paid_holidays
+
+  - changeSet:
+      id: 1569287995020-2
+      author: haibo-eb
+      changes:
+        - addForeignKeyConstraint:
+            baseColumnNames: creator_id
+            baseTableName: paid_holidays
+            constraintName: fk_paid_holidays_users
+            referencedColumnNames: id
+            referencedTableName: users
