609: remove email from table users (#323)
609: remove email from table users (#323)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -443,3 +443,11 @@ databaseChangeLog:
             constraintName: fk_paid_holidays_users
             referencedColumnNames: id
             referencedTableName: users
+
+  - changeSet:
+      id: 1569391145505-1
+      author: max-eb
+      changes:
+      - dropColumn:
+          columnName: email_work
+          tableName: users
