618: Text that says Interviewed.com should now be SimplyHired.com (#331)
618: Text that says Interviewed.com should now be SimplyHired.com (#331)

--- a/config/application-local.yml
+++ b/config/application-local.yml
@@ -33,7 +33,7 @@ spring:
     expiration: 36000
 
 application:
-  systemEmailAddress: noreply@interviewed.com
+  systemEmailAddress: noreply@SimplyHired.com
   frontEndAddress: http://localhost:3000/
   helpUrl: http://localhost:3000/
 
