--- a/config/application-env.yml
+++ b/config/application-env.yml
@@ -6,7 +6,7 @@ spring:
     cache: false
 
 application:
-  systemEmailAddress: noreply@interviewed.com
+  systemEmailAddress: noreply@SimplyHired.com
   frontEndAddress: https://hrs.interviewed-qa.com/
 
 aws:
