625 change deactivate user time dynamically (#337)
* use redis to cache logged user's information

* finish coding

* remove useless file

* finish coding

* fix conflicts

* review

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -443,3 +443,19 @@ databaseChangeLog:
             constraintName: fk_paid_holidays_users
             referencedColumnNames: id
             referencedTableName: users
+
+  - changeSet:
+      id: 1569724784254-1
+      author: wenhao-eb
+      preConditions:
+        onFail: MARK_RAN
+        not:
+          columnExists:
+            columnName: users
+      changes:
+        - addColumn:
+            columns:
+              - column:
+                  name: deactivated
+                  type: BOOLEAN
+            tableName: users
