625 change deactivate user time dynamically (#338)
625 change deactivate user time dynamically (#338)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -458,4 +458,5 @@ databaseChangeLog:
               - column:
                   name: deactivated
                   type: BOOLEAN
+                  defaultValue: false
             tableName: users
