--- a/config/application.yml
+++ b/config/application.yml
@@ -24,6 +24,11 @@ spring:
     mode: HTML5
   mvc:
     locale: en_US
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 30MB
+      max-request-size: 30MB
 cloud:
   aws:
     stack:
