676: share s3 fils with pre signed url (#399)
676: share s3 fils with pre signed url (#399)

--- a/config/application-env.yml
+++ b/config/application-env.yml
@@ -10,7 +10,7 @@ application:
   frontEndAddress: https://hrs.interviewed-qa.com/
 
 aws:
-  bucketName: shamu-hrs-qa
+  bucketName: shamu-hrs-qa-company
   folder: media
 
 cloud:
