809: rename balance to initial_balance for time_off_user (#408)
809: rename balance to initial_balance for time_off_user (#408)

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -2719,3 +2719,19 @@ databaseChangeLog:
           onUpdate: CASCADE
           referencedColumnNames: id
           referencedTableName: benefit_plans
+
+  - changeSet:
+      id: 1572847764535-1
+      author: Qi-Jia
+      preconditions:
+        onFail: MARK_RAN
+        columnExist:
+          tableName: time_off_policies_users
+          columnName: balance
+      changes:
+        - renameColumn:
+            columnDataType: INT
+            newColumnName: initial_balance
+            oldColumnName: balance
+            tableName: time_off_policies_users
+
