--- a/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-3.yml
@@ -1530,7 +1530,7 @@ databaseChangeLog:
       - addForeignKeyConstraint:
           baseColumnNames: user_status_id
           baseTableName: users
-          constraintName: fk_user_user_status
+          constraintName: fk_users_user_statuses_status
           onDelete: RESTRICT
           onUpdate: CASCADE
           referencedColumnNames: id
