--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,12 @@
       <version>1.7.27</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.libphonenumber</groupId>
+      <artifactId>libphonenumber</artifactId>
+      <version>8.10.22</version>
+    </dependency>
+
   </dependencies>
 
   <dependencyManagement>
