910: Time off bug add a new paid holiday leads to an error (#463)
* Delete trigger
powered by max-eb

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
@@ -2545,3 +2545,10 @@ databaseChangeLog:
         baseTableName: users
         constraintName: fk_user_user_contact_information
 
+- changeSet:
+    id: 1574131117441-1
+    author: haibo-eb
+    changes:
+    - sql:
+       sql: drop trigger ins_paid_holidays
+
