SH-932 - Use systemEmailAddress for all emails (#471)

--- a/config/application-env.yml
+++ b/config/application-env.yml
@@ -6,7 +6,7 @@ spring:
     cache: false
 
 application:
-  systemEmailAddress: noreply@SimplyHired.com
+  systemEmailAddress: no-reply@interviewed-qa.com
   frontEndAddress: https://hrs.interviewed-qa.com/
 
 aws:
