--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,12 @@
       <version>8.10.22</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>4.2.2</version>
+    </dependency>
+
   </dependencies>
 
   <dependencyManagement>
