SH-982 - Use id from users table for per-user salt (#490)
* SH-982 - Use id from users table for per-user salt

* SH-982 - Use existing variable

* SH-982 - Add salt column migration

* SH-982 - Generate salt if null for user

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
@@ -2578,3 +2578,13 @@ databaseChangeLog:
           referencedColumnNames: id
           referencedTableName: countries
 
+- changeSet:
+    id: 1574383435713-1
+    author: jordanc-indeed
+    changes:
+      - addColumn:
+          columns:
+            - column:
+                name: salt
+                type: VARCHAR(255)
+          tableName: users
