1063:salts are never generated for users (#535)
1063:Salts are never generated for users.

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
@@ -2609,3 +2609,11 @@ databaseChangeLog:
     changes:
     - dropTable:
         tableName: time_off_requests_approvers
+
+- changeSet:
+    id: 1575666601000-1
+    author: lei-eb
+    changes:
+     - sql:
+         sql: update users set salt = REPLACE(UUID(), '-', '') where salt is null;
+
