1108：Code Refactor-Job and Company (#552)
* 1108：Code Refactor-Job and Company

--- a/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
+++ b/src/main/resources/db/changelog/db.changelog-0.0.1-4.yml
@@ -2419,3 +2419,20 @@ databaseChangeLog:
      - sql:
          sql: update users set salt = REPLACE(UUID(), '-', '') where salt is null;
 
+- changeSet:
+      id: 1575883980072-1
+      author: bin-eb
+      preConditions:
+        onFail: WARN
+      changes:
+          - dropForeignKeyConstraint:
+                baseTableName: office_addresses
+                constraintName: fk_offices_addresses_countries
+
+- changeSet:
+      id: 1575883980072-2
+      author: bin-eb
+      changes:
+      - dropColumn:
+          columnName: country_id
+          tableName: office_addresses
